--- a/README
+++ b/README
@@ -2,13 +2,13 @@
 Introduction
 ===============================
 
-Bixo is an open source Java web mining tooklit that runs as a series of Cascading
+Bixo is an open source Java web mining toolkit that runs as a series of Cascading
 pipes. It is designed to be used as a tool for creating customized web mining apps.
 By building a customized Cascading pipe assembly, you can quickly create a workflow
 using Bixo that fetches web content, parses, analyzes, and publishes the results.
 
 Bixo borrows heavily from the Apache Nutch project, as well as many other open source
-rojects at Apache and elsewhere.
+projects at Apache and elsewhere.
 
 Bixo is released under the MIT license.
 
