--- a/contrib/helpful/README
+++ b/contrib/helpful/README
@@ -22,7 +22,7 @@ To build this code:
 % cd <path to Bixo>/contrib/helpful
 % ant clean compile
 
-and to create an Eclipse project:
+To create an Eclipse project:
 
 % cd <path to Bixo>/contrib/helpful
 % ant eclipse
