Updated build doc link from 101tec.com to openbixo.org

--- a/README
+++ b/README
@@ -16,7 +16,7 @@ Bixo is released under the MIT license.
 Building
 ===============================
 
-See http://bixo.101tec.com/documentation/building-bixo/ for full details.
+See http://openbixo.org/documentation/building-bixo/ for full details.
 
 You need Apache Ant 1.7 or higher. 
 
