--- a/examples/README
+++ b/examples/README
@@ -1,5 +1,11 @@
 The "examples" folder contains a set of examples to showcase Bixo.
 
+The SimpleCrawlTool demonstrates a simple web crawler. You provide
+it with a starting domain name (e.g. cnn.com) and a user agent name,
+and it will crawl for the specified number of loops.
+
+The WebMinintTool demonstrates a focused crawler with xx
+
 <fill in more details here>
 
 To build this code:
