--- a/examples/README
+++ b/examples/README
@@ -4,9 +4,11 @@ The SimpleCrawlTool demonstrates a simple web crawler. You provide
 it with a starting domain name (e.g. cnn.com) and a user agent name,
 and it will crawl for the specified number of loops.
 
-The WebMiningTool demonstrates a focused crawler with xx
+The WebMiningTool demonstrates a focused crawler with a focus on 
+extracting (un)structured data from web pages. It demonstrateds how 
+to analyze the fetched data from a page using a DOM parser.  
 
-<fill in more details here>
+
 
 To build this code:
 
